[gd_scene load_steps=4 format=3 uid="uid://bo1iyqqo406pe"]

[ext_resource type="Script" uid="uid://i0vb465400k6" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://cl5v0hqybpn34" path="res://main_menu.tscn" id="2_h2yge"]
[ext_resource type="PackedScene" uid="uid://10lgne5mwgx1" path="res://end_screen.tscn" id="3_h2yge"]

[node name="Main" type="Node"]
script = ExtResource("1_0xm2m")

[node name="MainMenu" parent="." instance=ExtResource("2_h2yge")]

[node name="EndScreen" parent="." instance=ExtResource("3_h2yge")]
visible = false

[connection signal="start_game" from="MainMenu" to="." method="start_game"]
[connection signal="back_to_main_menu" from="EndScreen" to="." method="_on_end_screen_back_to_main_menu"]
